Add TableView in MyReceiptViewController

--- a/BizplayReceipt/ApplicationFiles/Base.lproj/Main.storyboard
+++ b/BizplayReceipt/ApplicationFiles/Base.lproj/Main.storyboard
@@ -373,39 +373,12 @@
                         <outlet property="btnAlarm" destination="AjZ-so-qy9" id="y0c-EF-L3b"/>
                         <outlet property="btnMore" destination="2Y0-fV-2Hh" id="TLj-Z4-vci"/>
                         <outlet property="btnRcpt" destination="PuD-3R-C3W" id="w7O-XS-Ok2"/>
+                        <outlet property="receiptTableView" destination="VMA-c2-4vI" id="Lqr-ew-f6i"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hJn-qm-U9W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5444.9275362318849" y="142.63392857142856"/>
-        </scene>
-        <!--Table View Controller-->
-        <scene sceneID="rCo-rZ-HFy">
-            <objects>
-                <tableViewController id="3Ax-3D-lFp" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="tlU-zO-3Ao">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ibJ-qx-wd2">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ibJ-qx-wd2" id="0Ky-kA-4eZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="3Ax-3D-lFp" id="Xgx-cS-Jyc"/>
-                            <outlet property="delegate" destination="3Ax-3D-lFp" id="5wD-Cf-klb"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yoD-0w-VVP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6313" y="143"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="Vt9-eI-G4L">
