--- a/BizplayReceipt/ApplicationFiles/Base.lproj/Main.storyboard
+++ b/BizplayReceipt/ApplicationFiles/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rDl-wK-EEm">
-                                <rect key="frame" x="32" y="313" width="310" height="34"/>
+                                <rect key="frame" x="32" y="313" width="349" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" textContentType="username"/>
@@ -176,14 +176,6 @@
                                 <color key="textColor" red="0.44705882349999998" green="0.45882352939999999" blue="0.46666666670000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="30k-Ib-zTZ">
-                                <rect key="frame" x="360" y="320" width="21" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="textDelIcon"/>
-                                <connections>
-                                    <action selector="onTextDelete:" destination="8bm-s3-Qoj" eventType="touchUpInside" id="bnn-3m-iXp"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hrb-rq-f14">
                                 <rect key="frame" x="360" y="364" width="21" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -198,7 +190,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="d8d-gD-7Oh"/>
                     <connections>
-                        <outlet property="btnAutuLogin" destination="O2Y-hv-joH" id="enh-Oe-IPz"/>
+                        <outlet property="btnAutoLogin" destination="O2Y-hv-joH" id="enh-Oe-IPz"/>
                         <outlet property="btnFindID" destination="63j-LJ-smm" id="O6S-MM-nuF"/>
                         <outlet property="btnFindPW" destination="4Jx-zU-4LR" id="1WH-dk-lgK"/>
                         <outlet property="btnLogin" destination="efc-Kc-QqZ" id="LT1-47-v2D"/>
@@ -309,77 +301,6 @@
             </objects>
             <point key="canvasLocation" x="4551" y="856"/>
         </scene>
-        <!--My Receipt View Controller-->
-        <scene sceneID="5CH-8a-7LI">
-            <objects>
-                <viewController storyboardIdentifier="MyReceiptViewController_sid" id="JkN-y5-2Sh" customClass="MyReceiptViewController" customModule="비플_영수증" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4TC-jh-Ovl">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4BF-cS-3tW">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.25882352939999997" green="0.52549019610000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.25882352939999997" green="0.52549019610000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PuD-3R-C3W">
-                                <rect key="frame" x="0.0" y="0.0" width="140" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="mnRcptOnIcon"/>
-                                <connections>
-                                    <action selector="onRcpt:" destination="JkN-y5-2Sh" eventType="touchUpInside" id="Fs6-ly-iku"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AjZ-so-qy9">
-                                <rect key="frame" x="137" y="0.0" width="140" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="mnAlarmOnIcon"/>
-                                <connections>
-                                    <action selector="onAlarm:" destination="JkN-y5-2Sh" eventType="touchUpInside" id="Kk7-Ot-c2W"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Y0-fV-2Hh">
-                                <rect key="frame" x="274" y="0.0" width="140" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="mnMoreOnIcon"/>
-                                <connections>
-                                    <action selector="onMore:" destination="JkN-y5-2Sh" eventType="touchUpInside" id="tMg-9F-REe"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VMA-c2-4vI">
-                                <rect key="frame" x="0.0" y="62" width="414" height="800"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="k8D-B0-4x1">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k8D-B0-4x1" id="IVx-w1-AsD">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="g8g-Pc-oNN"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="qGQ-Qc-kFL"/>
-                    <connections>
-                        <outlet property="btnAlarm" destination="AjZ-so-qy9" id="y0c-EF-L3b"/>
-                        <outlet property="btnMore" destination="2Y0-fV-2Hh" id="TLj-Z4-vci"/>
-                        <outlet property="btnRcpt" destination="PuD-3R-C3W" id="w7O-XS-Ok2"/>
-                        <outlet property="receiptTableView" destination="VMA-c2-4vI" id="Lqr-ew-f6i"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hJn-qm-U9W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5444.9275362318849" y="142.63392857142856"/>
-        </scene>
         <!--Search View Controller-->
         <scene sceneID="Vt9-eI-G4L">
             <objects>
@@ -448,10 +369,6 @@
         <image name="bizplayLogoSmall" width="111" height="36"/>
         <image name="chkboxOffIcon" width="21" height="21"/>
         <image name="introImg01" width="204" height="357"/>
-        <image name="mnAlarmOnIcon" width="41" height="41"/>
-        <image name="mnMoreOnIcon" width="41" height="41"/>
-        <image name="mnRcptOnIcon" width="41" height="41"/>
         <image name="pwdEyesOff" width="21" height="21"/>
-        <image name="textDelIcon" width="21" height="21"/>
     </resources>
 </document>
